--- a/02_activities/assignments/assignment_3.ipynb
+++ b/02_activities/assignments/assignment_3.ipynb
@@ -235,7 +235,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "I can see that petal length and petal width naturally form two clear clusters, which makes it easier to tell the different species apart. I also noticed that when looking at sepal width compared to petal length and petal width, two clusters show up, suggesting that flowers with a wider sepal tend to have shorter petals. On the other hand, when we look at sepal length with petal dimensions, two clusters appear as well, but in this case, longer sepals are linked with longer and wider petals."
+    "I can see that petal length and petal width naturally form two clear clusters, which makes it easier to tell the different species apart. \n",
+    "\n",
+    "I also noticed that when looking at sepal width compared to petal length and petal width, two clusters show up, suggesting that flowers with a wider sepal tend to have shorter petals. \n",
+    "\n",
+    "On the other hand, when we look at sepal length with petal dimensions, two clusters appear as well, but in this case, longer sepals are linked with longer and wider petals."
    ]
   },
   {
