--- a/02_activities/assignments/assignment_3.ipynb
+++ b/02_activities/assignments/assignment_3.ipynb
@@ -253,10 +253,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "b2cfec72",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
+      "0          -0.900681          1.019004          -1.340227         -1.315444\n",
+      "1          -1.143017         -0.131979          -1.340227         -1.315444\n",
+      "2          -1.385353          0.328414          -1.397064         -1.315444\n",
+      "3          -1.506521          0.098217          -1.283389         -1.315444\n",
+      "4          -1.021849          1.249201          -1.340227         -1.315444\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize the StandardScaler\n",
     "scaler = StandardScaler()\n",
@@ -284,7 +297,9 @@
    "id": "53d77d5c",
    "metadata": {},
    "source": [
-    "> Your answer here ... "
+    "> Your answer here ... \n",
+    "\n",
+    "Standardizing predictor variables is important because it puts all features on the same scale, preventing any one feature from dominating just because its numbers are bigger. This helps the model work better and find patterns more efficiently. For models that rely on distances, like K-Nearest Neighbors, standardization ensures that all features are treated fairly in the calculations. It also keeps regularization penalties balanced, so no feature is unfairly reduced in importance. Overall, it makes features easier to compare and helps the model produce more accurate and fair results.  Standardization helps create clusters that genuinely reflect the underlying patterns in your data, rather than being affected by the different scales of the features."
    ]
   },
   {
