--- a/02_activities/assignments/assignment_3.ipynb
+++ b/02_activities/assignments/assignment_3.ipynb
@@ -430,32 +430,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "be4c4011",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid character '🤷' (U+1F937) (1502576830.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[7], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    mean_petal_width = 🤷‍♂️\u001b[0m\n\u001b[1;37m                       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid character '🤷' (U+1F937)\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean of Petal Width: 1.199\n",
+      "90% Confidence Interval for the mean of Petal Width: (1.098, 1.302)\n"
      ]
     }
    ],
    "source": [
     "# Your answer here...\n",
     "\n",
-    "mean_petal_width = 🤷‍♂️\n",
+    "# Extract the Petal Width column\n",
+    "petal_width = iris_df['petal width (cm)']\n",
     "\n",
     "np.random.seed(123)\n",
     "\n",
-    "lower_bound = 🤷‍♂️\n",
-    "upper_bound = 🤷‍♂️\n",
+    "# Set the number of bootstrap samples\n",
+    "n_samples = 10000\n",
+    "bootstrap_means = []\n",
     "\n",
-    "# Display the result\n",
-    "print(f\"Mean of Petal Width: {mean_petal_width}\")\n",
-    "print(f\"90% Confidence Interval of Mean Petal Width: ({lower_bound}, {upper_bound})\")"
+    "# Generate bootstrap samples and calculate the mean for each sample\n",
+    "for _ in range(n_samples):\n",
+    "    # Sample with replacement\n",
+    "    sample = np.random.choice(petal_width, size=len(petal_width), replace=True)\n",
+    "    bootstrap_means.append(np.mean(sample))\n",
+    "\n",
+    "# Calculate the 90% confidence interval\n",
+    "lower_bound = np.percentile(bootstrap_means, 5)  # 5th percentile\n",
+    "upper_bound = np.percentile(bootstrap_means, 95)  # 95th percentile\n",
+    "\n",
+    "# Calculate the overall mean of Petal Width\n",
+    "mean_petal_width = np.mean(petal_width)\n",
+    "\n",
+    "# Display the results\n",
+    "print(f\"Mean of Petal Width: {mean_petal_width:.3f}\")\n",
+    "print(f\"90% Confidence Interval for the mean of Petal Width: ({lower_bound:.3f}, {upper_bound:.3f})\")\n"
    ]
   },
   {
