last questions answered

--- a/02_activities/assignments/assignment_3.ipynb
+++ b/02_activities/assignments/assignment_3.ipynb
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "be4c4011",
    "metadata": {},
    "outputs": [
@@ -438,8 +438,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean of Petal Width: 1.199\n",
-      "90% Confidence Interval for the mean of Petal Width: (1.098, 1.302)\n"
+      "Mean of Petal Width: 1.20\n",
+      "90% Confidence Interval for the mean of Petal Width: (1.10, 1.30)\n"
      ]
     }
    ],
@@ -469,8 +469,8 @@
     "mean_petal_width = np.mean(petal_width)\n",
     "\n",
     "# Display the results\n",
-    "print(f\"Mean of Petal Width: {mean_petal_width:.3f}\")\n",
-    "print(f\"90% Confidence Interval for the mean of Petal Width: ({lower_bound:.3f}, {upper_bound:.3f})\")\n"
+    "print(f\"Mean of Petal Width: {mean_petal_width:.2f}\")\n",
+    "print(f\"90% Confidence Interval for the mean of Petal Width: ({lower_bound:.2f}, {upper_bound:.2f})\")\n"
    ]
   },
   {
@@ -487,7 +487,9 @@
    "id": "16a6e104",
    "metadata": {},
    "source": [
-    ">  Your answer..."
+    ">  Your answer...\n",
+    "\n",
+    "We use bootstrapping to get a better idea of the average Petal Width and how much it might vary. By taking lots of samples from the data, we can see how different our average could be if we collected new samples. This method helps you feel more certain about your estimate, showing that even if you take different samples, you expect the true average to fall within a specific range."
    ]
   },
   {
@@ -504,7 +506,9 @@
    "id": "e5be82ec",
    "metadata": {},
    "source": [
-    "> Your answer..."
+    "> Your answer...\n",
+    "\n",
+    "Calculating a confidence interval from bootstrap samples gives us a range where we think the true average might be. It shows us how much our estimate could change with different samples. A wider range means more uncertainty, while a narrower range means more confidence. In simple terms, it helps us feel more confident about the average we calculated and shows us how reliable that number is."
    ]
   },
   {
@@ -522,7 +526,9 @@
    "id": "0a7e6778",
    "metadata": {},
    "source": [
-    "> Your answer here..."
+    "> Your answer here...\n",
+    "\n",
+    " The actual average petal width for all the species in the Iris dataset falls between 1.10 cm and 1.30 cm. When we consider the confidence interval and the range of bootstrapped means, it looks like the average Petal Width is a solid and dependable estimate. The narrow confidence interval indicates that our sample average is probably very close to the true average for the whole group. Plus, the limited spread of the bootstrapped means suggests that our estimate is trustworthy."
    ]
   },
   {
